--- a/login-draft3/package.json
+++ b/login-draft3/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-google-signin": "^0.12.0",
+    "react-native-material-dropdown": "^0.5.2",
     "react-navigation": "^1.0.0-beta.19"
   },
   "devDependencies": {
